--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,12 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/splash.png" 
+  image_path: "assets/images/launcherIcon.png"
+  background_color: "#000000" # ← خلفية سوداء
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
