--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,10 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/splash.png"
-  
+  image_path: "assets/images/splash.png"                 
+  adaptive_icon_foreground: "assets/images/splash.png"      
+  adaptive_icon_background: "#000000"                      
+  background_color: "#000000"
 
 
 
