--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
     sdk: flutter
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.2
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.0
+  carousel_slider: ^5.1.0
+
 
 dev_dependencies:
   flutter_test:
